src/test/deca/context/valid/print.deca
{
        int a = 7;
        float b = 9;
        print("Ceci est une string", a, b);
}