src/test/deca/context/invalid/print.deca
//ERROR :7:
{
        int a, b, c;
        float d;
        boolean bool = true;
        print(a, "Bonjour",b);
        println(c, d, bool);
}